roles changed to enums, for better code readability